fix alignment

--- a/style/block-information.css
+++ b/style/block-information.css
@@ -5,13 +5,12 @@ html{
     scroll-behavior: smooth;
 }
 
-body::-webkit-scrollbar {
-    width: 12px
-} 
-
-body::-webkit-scrollbar-thumb {   
-    background-color: #472dbd;   
-    border-radius: 10px;
+body {
+    min-height: 100vh;
+    animation-fill-mode: forwards;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
 div.align-block{
@@ -37,31 +36,32 @@ main.content{
     align-items: center;
     justify-content: center;
     z-index: 2;
-    margin-top: 10%;
+    margin-top: 10% auto;
     display: flex;
     justify-content: center;
     align-items: center;;
+    position: relative;
 }
 
 div.personal-information img{
-    width: 150px;
-    height: 150px;
+    display: block;
+    margin: 40px auto 20px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
-    margin-left: 25%;
-    margin-bottom: 5%;
-    
+    position: relative;
 }
 
 div.personal-information h1{
     font-family: 'Poppins', sans-serif;
     color: #f2f8f1;
-    font-size: 40px;
+    font-size: 30px;
     text-align: center;
     margin-bottom: 3%;
 }
 
 div.personal-information h3{
-    font-size: 30px;
+    font-size: 20px;
 }
 
 div.personal-information h3,
@@ -81,7 +81,7 @@ div.icon-horizontal {
 }
 
 div.click-here{
-    width: 200px;
+    width: 170px;
     height: 30px;
     background-color: #49c4c6;
     border-radius: 50px;
@@ -91,7 +91,7 @@ div.click-here{
 div.click-here p{
     font-family: 'Bruno Ace SC', sans-serif;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 15px;
     color: #FFFFFF;
     text-align: center;
     margin-left: 15px;
