--- a/style/view.css
+++ b/style/view.css
@@ -8,6 +8,9 @@
     width: 160%;
     background: linear-gradient(180deg, #04fafd, 5%, #119dff, 50%, #030423);
     position: absolute;
+    background-size: cover;
+    background-position: center;
+    background-size: 100%;
 }
 
 .wrapper h1 {
